Minor spacing fix

--- a/components/Page/styles.module.css
+++ b/components/Page/styles.module.css
@@ -21,7 +21,4 @@
     max-width: 100%;
     gap: 0;
   }
-  .page {
-    margin-bottom: 28rem;
-  }
 }
